--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --list-different --write ."
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.16.11",
     "eslint": "^9.12.0",
+    "express": "^4.21.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "~5.5.4",
