--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.16.11",
     "eslint": "^9.12.0",
     "express": "^4.21.1",
+    "jose": "^5.9.4",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "~5.5.4",
