--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "eslint": "^9.12.0",
     "express": "^4.21.1",
     "jose": "^5.9.4",
+    "knex": "^3.1.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "sqlite3": "^5.1.7",
     "typescript": "~5.5.4",
     "typescript-eslint": "^8.8.1"
   }
