--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.16.11",
+    "argon2": "^0.41.1",
     "eslint": "^9.12.0",
     "express": "^4.21.1",
     "jose": "^5.9.4",
