--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "argon2": "^0.41.1",
     "eslint": "^9.12.0",
     "express": "^4.21.1",
+    "husky": "^9.1.6",
     "jose": "^5.9.4",
     "knex": "^3.1.0",
     "prettier": "^3.3.3",
